// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Tabs > should render correctly 1`] = `
<div>
  <div
    class="MuiTabs-root HvTabs-root css-1r4xh8c-StyledTabs ex13pr80 css-1ujnqem-MuiTabs-root"
  >
    <div
      class="MuiTabs-scroller HvTabs-scroller MuiTabs-fixed css-jpln7h-MuiTabs-scroller"
      style="overflow: hidden; margin-bottom: 0px;"
    >
      <div
        class="MuiTabs-flexContainer HvTabs-flexContainer css-heg063-MuiTabs-flexContainer"
        role="tablist"
      />
      <span
        class="MuiTabs-indicator HvTabs-indicator css-1aquho2-MuiTabs-indicator"
        style="left: 0px; width: 0px;"
      >
        <div />
      </span>
    </div>
  </div>
</div>
`;

exports[`Tabs > should render correctly all components 1`] = `
<div>
  <div
    class="MuiTabs-root HvTabs-root css-1r4xh8c-StyledTabs ex13pr80 css-1ujnqem-MuiTabs-root"
  >
    <div
      class="MuiTabs-scroller HvTabs-scroller MuiTabs-fixed css-jpln7h-MuiTabs-scroller"
      style="overflow: hidden; margin-bottom: 0px;"
    >
      <div
        class="MuiTabs-flexContainer HvTabs-flexContainer css-heg063-MuiTabs-flexContainer"
        role="tablist"
      >
        <button
          aria-selected="true"
          class="MuiButtonBase-root MuiTab-root HvTab-root MuiTab-textColorPrimary Mui-selected HvTab-selected css-19qpw0j-StyledTab evi6req0 css-1h9z7r5-MuiButtonBase-root-MuiTab-root"
          role="tab"
          tabindex="0"
          type="button"
        >
          Clickable tab 1
        </button>
        <button
          aria-selected="false"
          class="MuiButtonBase-root MuiTab-root HvTab-root MuiTab-textColorPrimary css-19qpw0j-StyledTab evi6req0 css-1h9z7r5-MuiButtonBase-root-MuiTab-root"
          role="tab"
          tabindex="-1"
          type="button"
        >
          Clickable tab 2
        </button>
        <button
          aria-selected="false"
          class="MuiButtonBase-root MuiTab-root HvTab-root MuiTab-textColorPrimary css-19qpw0j-StyledTab evi6req0 css-1h9z7r5-MuiButtonBase-root-MuiTab-root"
          role="tab"
          tabindex="-1"
          type="button"
        >
          Clickable tab 3
        </button>
      </div>
      <span
        class="MuiTabs-indicator HvTabs-indicator css-1aquho2-MuiTabs-indicator"
        style="left: 0px; width: 0px;"
      >
        <div />
      </span>
    </div>
  </div>
</div>
`;
